# cpp-starter-project

./: .appveyor.yml  .clang-format  .clang-tidy  .cmake-format  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  about.html  codecov.yml  conanfile.txt  download.html  faq.html  genindex.html  index.html  license.html  objects.inv  release-notes.html  search.html  searchindex.js
.circleci/: config.yml
_sources/: download.rst.txt  faq.rst.txt  index.rst.txt  license.rst.txt  release-notes.rst.txt
_sources/contributing/: index.rst.txt
cmake/: ClangTidy.cmake  FindCppCheck.cmake  Findlcov.cmake  Gcov.cmake  GetGitRevisionDescription.cmake  MiscFunctions.cmake  README.md  clang-tidy.cmake  conan.cmake  cotire.cmake  coverage.cmake  project.cmake  warnings.cmake
contributing/: bug-reports.html  index.html
data/: .gitkeep
docs/: CMakeLists.txt  README.md
docs/cpp-starter/: README.md  cmake.md  conan.md  continuous-integration.md  documentation.md  github-pages.md  linters.md  project-structure.md
docs/user/: create_changelog.sh  publish_gh-pages.sh  release_notes_header.rst
docs/user/source/: about.rst  conf.py  index.rst  license.rst
docs/user/source/contributing/: bug-reports.rst
packaging/: README.md  description.txt
src/: CMakeLists.txt  main.cpp  version.hpp.in
src/math/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp
tests/: CMakeLists.txt  main.cpp  test_helpers.hpp
tests/math/: test_fibonacci.cpp
tools/: CMakeLists.txt  README.md  build_run_clang_tidy.sh  run_clang_format.sh  run_cmake_format.sh  run_cppcheck.sh  run_shellcheck.sh  utils.sh
